Fix spacing between nav bar links

--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ header img {
 
 header ul {
     display: flex;
-    gap: 10px;
+    gap: 25px;
     flex: 1;
     justify-content: flex-end;
     margin-right: 10px;
